# risc-virtual-machine

./: .coverage  README.md  main.py  pyproject.toml  run.sh  run_clock.py  run_tests.sh  test_visualization.sh
.github/: copilot-instructions.md
.github/workflows/: tests.yml
docs/: CALL_RET_PSEUDO_INSTRUCTIONS.md  CPU_CLOCK.md  CPU_VISUALIZATION.md  EXCEPTION_REPORTING.md  INSTRUCTION_DISPLAY_FEATURE.md  INSTRUCTION_SET.md  INTERRUPT_IMPLEMENTATION.md  LABEL_SUPPORT.md  LA_PSEUDO_INSTRUCTION.md  REGISTER_ABI_NAMES.md
docs/testing/: PROGRAM_TESTING.md  TESTING.md
examples/: bouncing_ball.asm  bouncing_ball.s  call_ret_demo.asm  call_ret_simple.asm  clock.asm  clock_demo.asm  clock_demo.s  clock_old.asm  counter.asm  counter.s  division.s  factorial.asm  factorial.s  fibonacci.asm  fibonacci.s  hello.asm  j_demo.asm  label_demo.asm  label_demo.s  mret_test.asm  mret_test.s  multiply.asm  multiply.s  pattern.asm  pattern.s  prime_check.asm  prime_check.s  rt_timer_test.asm  rt_timer_test.s  sb_demo.s  string_demo.asm  string_demo.s  string_print.asm  test.asm  test.s  test_alignment_error.asm  test_alignment_error.s  test_char_literals.s  test_error_reporting.s  test_la.s  (+18 more)
examples/step-by-step/: step1.asm  step1.s  step2.s  step3.s
src/: __init__.py  assembler.py  cpu.py  cpu_clock.py  cpu_visualizer.py  debugger.py  display.py  instruction.py  memory.py  realtime_timer.py  timer.py  visualizer.py  vm.py
tests/: INTEGRATION_TESTING.md  README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py  test_helpers.py
tests/integration/: test_instructions.py  (+1 more)
(+14 files in other folders)
